--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "mongodb": "^5.5.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
