--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-id-swiper": "^4.0.0",
+    "react-slick": "^0.29.0",
     "reset-css": "^5.0.1",
     "resetcss": "^1.0.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^9.3.1"
   }
